Don't allow editing multiple investment transactions at once. The tooltip is commented due to the string freeze.

BUG: 240816

svn path=/trunk/extragear/office/kmymoney/; revision=1156795